# Intel-8080-emulator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  disassembler.cpp  main.cpp  main.h
Google_tests/: CMakeLists.txt  EmulatorInstructionTest.cpp
Google_tests/googletest-main/googletest/cmake/: internal_utils.cmake
include/: config.hpp  main.h  main.hpp
include/emulator/: emulator.h  emulator.hpp  instruction_implementations.h  instruction_implementations.hpp
include/gui_modules/: cpu_controls.h  cpu_controls.hpp  emulator_controls.h  emulator_controls.hpp  instruction_excecution_trace.h  instruction_execution_trace.hpp  memory_editor.h
include/gui_modules/debug/: debug.hpp  log.hpp
src/: main.cpp
src/emulator/: emulator.cpp  instruction_implementations.cpp
src/gui_modules/: cpu_controls.cpp  emulator_controls.cpp  instruction_execution_trace.cpp
src/gui_modules/debug/: debug.cpp  log.cpp
